--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  json_annotation: ^4.8.1
   provider: ^6.1.1
   gap: ^3.0.1
   flutter:
@@ -40,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
