--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   json_annotation: ^4.8.1
   provider: ^6.1.1
   gap: ^3.0.1
+  animated_splash_screen: ^1.3.0
   flutter:
     sdk: flutter
 
