--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,13 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
+  firebase_storage: ^11.6.0
   json_annotation: ^4.8.1
   provider: ^6.1.1
   gap: ^3.0.1
   animated_splash_screen: ^1.3.0
+  persistent_bottom_nav_bar: ^5.0.2
+  file_picker: ^5.3.3
   flutter:
     sdk: flutter
 
