--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,3 +31,11 @@
             android:value="2" />
     </application>
 </manifest>
+
+<uses-permission android:name="android.permission.CAMERA" />
+
+<application>
+  <meta-data
+    android:name="flutterEmbedding"
+    android:value="2" />
+</application>
