--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   animated_splash_screen: ^1.3.0
   persistent_bottom_nav_bar: ^5.0.2
   file_picker: ^5.3.3
+  cached_network_image: ^3.3.1
+  qr_flutter: ^4.1.0
+  scan: ^1.6.0
   flutter:
     sdk: flutter
 
