--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   cached_network_image: ^3.3.1
   qr_flutter: ^4.1.0
   scan: ^1.6.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   flutter:
     sdk: flutter
 
